# aws-nitro-enclaves-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Config  Makefile  NOTICE  README.md  Readme.md  SOURCES  THIRD_PARTY_LICENSES  THIRD_PARTY_LICENSES_RUST_CRATES.html  THIRD_PARTY_LICENSES_RUST_CRATES_AARCH64.html  THIRD_PARTY_LICENSES_RUST_CRATES_X86_64.html  about.toml  appspec.yml  build.rs  buildspec.yml  ci_entrypoint.sh  ci_entrypoint_wrapper.sh  init.c  install.sh  nc-vsock.c  nitro-cli-config.sh  run-nitro-cli-integration-tests  run_tests.sh  sources
.github/workflows/: ci.yml  event.yml  license_update.yml  main.yml  summary.yml
SPECS/: aws-nitro-enclaves-cli.spec
allocator/: Cargo.toml
allocator/src/: configuration.rs  error.rs  main.rs
allocator/src/resources/: cpu.rs  huge_pages.rs  mod.rs
blobs/: init  nsm.ko
blobs/aarch64/: Image.config  bzImage.config  cmdline  init  nsm.ko
blobs/x86_64/: bzImage.config  init  nsm.ko
bootstrap/: 10-autoload-module.conf  allocator.conf  allocator.yaml  env.sh  nitro-cli-config  nitro-enclaves-allocator  nitro-enclaves-allocator.service
cli_poweruser/: Cargo.toml  README_fuzzer  install_cargo_deps.sh  run_fuzzer.sh
cli_poweruser/fuzz/: Cargo.toml
cli_poweruser/fuzz/fuzz_targets/: fuzz_target_1.rs
cli_poweruser/src/: cli_dev.rs  commands_parser.rs  cpu_info.rs  json_output.rs  lib.rs  main.rs  resource_allocator_driver.rs  resource_manager.rs  testing_commands.rs  utils.rs
common/: Cargo.toml
common/src/: commands_parser.rs  json_output.rs  lib.rs
config/: env.sh  install  nitro-cli-config
config/service/: config-enclave-resources  config-enclave-resources.service
docs/: centos_stream_8_how_to_install_nitro_cli_from_github_sources.md  ci_pipeline.md  fedora_34_how_to_install_nitro_cli_from_github_sources.md  image_signing.md  rhel_8.4_how_to_install_nitro_cli_from_github_sources.md  ubuntu_20.04_how_to_install_nitro_cli_from_github_sources.md
driver-bindings/: Cargo.toml  README.md
driver-bindings/src/: bindings.rs  lib.rs  wrappers.rs
drivers/: Kconfig
drivers/nitro_cli_resource_allocator/: Makefile  nitro_cli_resource_allocator.c
drivers/nitro_cli_resource_allocator/include/linux/: nitro_cli_resource_allocator.h
drivers/nitro_cli_resource_allocator/samples/: Makefile  nitro_cli_resource_allocator_sample.c
drivers/virt/amazon/: Kconfig  Makefile
drivers/virt/amazon/nitro_enclaves/: Makefile  dkms.conf  ne_main.c  ne_main.h  ne_pci_dev.c  ne_pci_dev.h
drivers/virt/nitro_enclaves/: Dockerfile  Kconfig  Makefile  ne_misc_dev.c  ne_misc_dev.h  ne_pci_dev.c  ne_pci_dev.h  nitro-enclaves-dkms.spec  resource_allocator.c  resource_allocator.h
eif_defs/: Cargo.toml
eif_defs/src/: eif_hasher.rs  lib.rs
eif_loader/: Cargo.toml
eif_loader/src/: lib.rs
eif_utils/: Cargo.toml
eif_utils/src/: eif_reader.rs  identity.rs  lib.rs
enclave_api/: Cargo.toml  build.rs
enclave_api/src/: enclave_proc_comm.rs  lib.rs
enclave_api/src/common/: commands_parser.rs  json_output.rs  logger.rs  mod.rs  signal_handler.rs
enclave_api/src/enclave_proc/: commands.rs  connection.rs  connection_listener.rs  cpu_info.rs  mod.rs  resource_manager.rs  socket.rs  utils.rs
enclave_build/: Cargo.toml
enclave_build/docs/: storage.md
enclave_build/src/: cache.rs  cache_manager.rs  constants.rs  docker.rs  image.rs  image_cache.rs  image_manager.rs  lib.rs  main.rs  pull.rs  storage.rs  utils.rs  yaml_generator.rs
enclave_build/test_data/: test_cmd
enclave_build/tests/: image_generation.rs
enclave_driver/: Cargo.toml  build.rs
enclave_driver/src/: includes.rs  lib.rs
enclave_proc/: Cargo.toml
enclave_proc/src/: cli_dev.rs  json_output.rs  lib.rs  main.rs  resource_manager.rs  testing_commands.rs  utils.rs
examples/aarch64/hello/: Dockerfile  README.md  hello.sh
examples/x86_64/hello/: Dockerfile
include/linux/: nitro_enclaves.h
include/uapi/linux/: nitro_enclaves.h
rust-cose/: Cargo.toml
rust-cose/src/: lib.rs
samples/command_executer/: Cargo.toml  README.md
samples/command_executer/resources/: Dockerfile  Dockerfile.alpine
samples/command_executer/resources/blobs/: bzImage  cmdline  init  linuxkit  nsm.ko
samples/command_executer/resources/blobs/aarch64/: Image  Image.config  bzImage  cmdline  init  linuxkit  nsm.ko
samples/command_executer/resources/blobs/x86_64/: bzImage  bzImage.config  init  linuxkit  nsm.ko
samples/command_executer/src/: command_parser.rs  lib.rs  main.rs  protocol_helpers.rs  utils.rs
scripts/: bump-rust-version.sh  lib.sh  lib_tests.sh  run_tests.sh
src/: cli_dev.rs  commands_parser.rs  cpu_info.rs  document_errors.rs  enclave_proc_comm.rs  json_output.rs  lib.rs  main.rs  resource_allocator_driver.rs  resource_manager.rs  testing_commands.rs  utils.rs
src/bindings/: .gitignore
src/common/: commands_parser.rs  document_errors.rs  json_output.rs  logger.rs  mod.rs  signal_handler.rs
src/enclave_proc/: cli_dev.rs  commands.rs  connection.rs  connection_listener.rs  cpu_info.rs  json_output.rs  mod.rs  resource_manager.rs  socket.rs  testing_commands.rs  utils.rs
src/poweruser/: cli_dev.rs  mod.rs  poweruser_lib.rs  resource_allocator_driver.rs  resource_manager.rs  testing_commands.rs
srpm/: aws-nitro-enclaves-cli.spec  aws-nitro-enclaves-vtoken.spec
tests/: test_dev_driver.rs  test_nitro_cli_args.rs  test_pci_device.rs  test_resource_manager.rs  tests.rs
tests/drivers/: Kconfig  Makefile
tests/drivers/nitro_enclaves_mock/: Makefile  ne_main.c  ne_main.h
tests/integration/: helpers.py  test_commands.py  test_installation.py  test_setup.py
tools/: Dockerfile  Dockerfile1804  Dockerfile1804.aarch64  Dockerfile1804.x86_64  cargo_vendor_config_template  env.sh  nitro-cli-config.sh
vsock_proxy/: Cargo.toml  README.md
vsock_proxy/configs/: config.yaml  vsock-proxy.yaml
vsock_proxy/service/: nitro-enclaves-vsock-proxy.service  vsock-proxy  vsock-proxy.logrotate.conf  vsock-proxy.service
vsock_proxy/src/: dns.rs  lib.rs  main.rs  proxy.rs  starter.rs
vsock_proxy/tests/: connection_test.rs
(+1 files in other folders)
