[package]
name = "nitro-cli"
version = "1.2.0"
authors = ["The AWS Nitro Enclaves Team <aws-nitro-enclaves-devel@amazon.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
serde = { version = ">=1.0", features = ["derive"] }
chrono = "0.4"
clap = "2.33"
inotify = "0.9"
serde_json = "1.0"
nix = "0.23"
log = "0.4"
libc = { version = ">=0.2.69" }
flexi_logger = "0.15"
page_size = "0.4"
signal-hook = "0.3"
serde_cbor = "0.11"
eif_loader = { path = "./eif_loader" }
eif_defs = { path = "./eif_defs" }
eif_utils = { path = "./eif_utils" }
enclave_build = { path = "./enclave_build" }
openssl = "0.10"
vsock = "0.2"
vmm-sys-util = "0.8.0"
sha2 = "0.9.5"
hex = "0.4"

lazy_static = "1.4.0"

[build-dependencies]
bindgen = { version=">=0.54" }

[dev-dependencies]
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
tempfile = "3.1"

[workspace]
members = [".", "eif_defs", "eif_loader", "eif_utils", "enclave_build", "vsock_proxy"]

[features]
default = []
