[package]
name = "nitro-cli"
version = "1.2.2"
authors = ["The AWS Nitro Enclaves Team <aws-nitro-enclaves-devel@amazon.com>"]
edition = "2018"
license = "Apache-2.0"
rust-version = "1.60"

[dependencies]
serde = { version = ">=1.0", features = ["derive"] }
chrono = "0.4"
clap = "3.2"
inotify = "0.10"
serde_json = "1.0"
nix = "0.26"
log = "0.4"
libc = { version = ">=0.2.69" }
flexi_logger = "0.25"
page_size = "0.5"
signal-hook = "0.3"
serde_cbor = "0.11"
driver-bindings = { path = "./driver-bindings" }
aws-nitro-enclaves-image-format = "0.2"
eif_loader = { path = "./eif_loader" }
enclave_build = { path = "./enclave_build" }
openssl = "0.10"
vsock = "0.3"
vmm-sys-util = "0.11.1"
sha2 = "0.10.6"
hex = "0.4"

lazy_static = "1.4.0"

[build-dependencies]
bindgen = { version=">=0.54" }

[dev-dependencies]
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
tempfile = "3.5"

[workspace]
members = [".", "driver-bindings", "eif_loader", "enclave_build", "vsock_proxy"]

[features]
default = []
