[package]
name = "common"
version = "0.1.0"
authors = ["Andrei Trandafir <aatrand@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = ">=1.0", features = ["derive"] }
clap = "2.33"
log = "0.4"
signal-hook = "0.1"
serde_cbor = "0.10"