[package]
name = "eif_defs"
version = "0.1.0"
authors = ["Alexandru Gheorghe <aggh@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.5"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = "1.0"
num-traits = "0.2"
num-derive = "0.3"
byteorder = "1.3"
