[package]
name = "eif_loader"
version = "0.1.0"
authors = ["The AWS Nitro Enclaves Team <aws-nitro-enclaves-devel@amazon.com>"]
edition = "2018"
rust-version = "1.68"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-nitro-enclaves-image-format = "0.5"
nix = "0.26"
libc = "0.2"
vsock = "0.5"

[dev-dependencies]
sha2 = "0.9.5"
tempfile = "3.19"

[lib]
name = "eif_loader"
crate-type = ["staticlib", "rlib"]
