[package]
name = "eif_utils"
version = "0.1.0"
authors = ["Alexandru Gheorghe <aggh@amazon.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
sha2 = "0.9.5"
hex = "0.3.2"
crc = "1.8"
eif_defs = { path = "../eif_defs" }
aws-nitro-enclaves-cose = "0.1"
openssl = "0.10"
serde_cbor = "0.11"
serde = { version = ">=1.0", features = ["derive"] }
