[package]
name = "enclave_build"
version = "0.1.0"
authors = ["The AWS Nitro Enclaves Team <aws-nitro-enclaves-devel@amazon.com>"]
edition = "2018"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
shiplift = "0.7"
tempfile = "3.5.0"
tokio = { version = "1.26", features = ["rt-multi-thread"] }
base64 = "0.21"
log = "0.4"
url = "2.3"
sha2 = "0.9.5"
futures = "0.3.27"

aws-nitro-enclaves-image-format = "0.2"
