[package]
name = "enclave-proc"
version = "0.1.0"
authors = ["Andrei Trandafir <aatrand@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = ">=1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.6"
libc = "0.2"
nix = "0.15"
serde_cbor = "0.10"
procinfo = "0.4"
common = { path = "../common" }
