[package]
name = "command-executer"
version = "0.1.0"
authors = ["Alexandra Pirvulescu <alexprv@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
log = "0.4"
nix = "0.15"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.3"
