[package]
name = "command-executer"
version = "0.1.0"
authors = ["The AWS Nitro Enclaves Team <aws-nitro-enclaves-devel@amazon.com>"]
edition = "2018"
rust-version = "1.68"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2"
log = "0.4"
nix = "0.26"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.3"
num = "0.2"
num-derive = "0.4"
num-traits = "0.2"
